--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 
 <head>
-    <title>吃掉小十二</title>
+    <title>吃掉十二</title>
     <meta itemprop="name" content="吃掉十二" />
     <meta itemprop="description" content="新概念音游" />
     <meta charset="utf-8" />
